--- a/index.html
+++ b/index.html
@@ -226,14 +226,15 @@
 
                             <!-- Selezione date -->
                             <div class="col-md-12">
-                                <label>Seleziona le date del tuo viaggio:</label>
+                                <label>Seleziona le date di partenza e ritorno:</label>
                                 <div class="input-daterange input-group">
-                                    <span class="input-group-addon">Dal</span>
+                                    <span class="input-group-addon hidden-xs">Dal</span>
                                     <input type="text" class="input-sm form-control" name="start" id="datepicker-dal" value="01/05/2015"/>
-                                    <span class="input-group-addon">al</span>
+                                    <span class="input-group-addon hidden-xs">al</span>
                                     <input type="text" class="input-sm form-control" name="end" id="datepicker-al" value="07/05/2015"/>
                                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                 </div>
+                                <br>
                             </div>
                         </fieldset>
                         <br>
