--- a/area_personale/profilo.html
+++ b/area_personale/profilo.html
@@ -124,7 +124,7 @@
                                                 <td>Elena</td>
                                             </tr>
                                             <tr>
-                                                <td>Cognome</td>
+                                                <td>Cognome</td><br>
                                                 <td>Colombo</td>
                                             </tr>
                                             <tr>
@@ -196,6 +196,7 @@
                                     <tr>
                                         <td>Nome</td>
                                     </tr>
+                                    <br>
                                     <tr>
                                         <td>Elena</td>
                                     </tr>
