--- a/area_personale/profilo.html
+++ b/area_personale/profilo.html
@@ -307,7 +307,7 @@
                                         <thead>
                                             <tr>
                                                 <td><i class="fa fa-facebook-official" style="height: 25px"></i></td>
-                                                <td><p>pallino.pinco@facebook.com</p></td>
+                                                <td><p>elena.colombo@email.it</p></td>
                                                 <td><button class="btn btn-default" style="text-align:center">Scollega account</button></td>
                                             </tr>
                                             <tr>
