--- a/footer.html
+++ b/footer.html
@@ -41,11 +41,11 @@
                         <div class="col-sm-3 col-sm-offset-1">
                             <li>
                                 <p class="white">Viaggi più richiesti</p>
-                                <p> <a href="/viaggi/america.html">America</a>
+                                <p> <a href="/viaggi/europa/berlino.html">Berlino</a>
                                     <br/>
-                                    <a href="/viaggi/europa.html">Europa</a>
+                                    <a href="/viaggi/america/ottawa.html">Ottawa</a>
                                     <br/>
-                                    <a href="/viaggi/europa/parigi.html">Parigi</a>
+                                    <a href="/viaggi/oceania/sydney.html">Sydney</a>
                                 </p>
                             </li>
                         </div>
