--- a/area_personale/carrello_conparigi.html
+++ b/area_personale/carrello_conparigi.html
@@ -181,7 +181,7 @@
 
     <!-- Load page from id start -->
     <script>
-        $("#navbar").load("/navbar.html");
+        $("#navbar").load("/navbar_conparigi.html");
     </script>
 
     <script>
