--- a/area_personale/carrello_vuoto.html
+++ b/area_personale/carrello_vuoto.html
@@ -101,7 +101,7 @@
 
     <!-- Load page from id start -->
     <script>
-        $("#navbar").load("/navbar.html");
+        $("#navbar").load("/navbar_carrellovuoto.html");
     </script>
 
     <script>
