--- a/azienda/contatti.html
+++ b/azienda/contatti.html
@@ -15,20 +15,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Main CSS -->
-    <link href="css/main.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
 
     <!-- FontAwesome -->
-    <link href="fontawesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="fontawesome/css/font-awesome.css" rel="stylesheet">
+    <link href="/fontawesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/fontawesome/css/font-awesome.css" rel="stylesheet">
 
     <!-- MapGlyphs -->
-    <link href="mapglyphs/mapglyphs.css" rel="stylesheet">
+    <link href="/mapglyphs/mapglyphs.css" rel="stylesheet">
 
     <!-- Material Design iconic font -->
-    <link href="material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
+    <link href="/material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
 
 
 </head>
@@ -45,7 +45,7 @@
             <!-- PATH -->
 
             <ol class="breadcrumb" id="path">
-                <li><a href="index.html">Home</a>
+                <li><a href="/index.html">Home</a>
                 </li>
                 <li>Azienda</li>
                 <li class="active">Contatti</li>
@@ -60,16 +60,16 @@
                     <!-- SIDE MENU -->
 
                     <div class="list-group">
-                        <a href="chi_siamo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo aziendale</a>
-                        <a href="business.html" class="list-group-item"><i class="fa fa-line-chart"></i> Business</a>
-                        <a href="sicurezza.html" class="list-group-item"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
-                        <a href="tos.html" class="list-group-item"><i class="md md-info-outline"></i> Termini e Condizioni</a>
-                        <a href="contatti.html" class="list-group-item active"><i class="md md-email"></i> Contatti</a>
+                        <a href="/azienda/chi_siamo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo aziendale</a>
+                        <a href="/azienda/business.html" class="list-group-item"><i class="fa fa-line-chart"></i> Business</a>
+                        <a href="/azienda/sicurezza.html" class="list-group-item"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
+                        <a href="/azienda/tos.html" class="list-group-item"><i class="md md-info-outline"></i> Termini e Condizioni</a>
+                        <a href="/azienda/contatti.html" class="list-group-item active"><i class="md md-email"></i> Contatti</a>
                         <a href="#sottomenu" class="list-group-item" data-toggle="collapse"><i class="md md-work"></i> Lavora con Noi</a>
                         <div class="collapse" id="sottomenu">
-                            <a href="lavori_stagionali.html" class="list-group-item"><i class="fa fa-briefcase"></i> Lavori stagionali</a>
-                            <a href="lavori_stagionali.html#studenti" class="list-group-item"><i class="fa fa-briefcase"></i> Studenti</a>
-                            <a href="lavori_stagionali.html#stage" class="list-group-item"><i class="fa fa-briefcase"></i> Opportunità di stage</a>
+                            <a href="/azienda/lavori_stagionali.html" class="list-group-item"><i class="fa fa-briefcase"></i> Lavori stagionali</a>
+                            <a href="/azienda/lavori_stagionali.html#studenti" class="list-group-item"><i class="fa fa-briefcase"></i> Studenti</a>
+                            <a href="/azienda/lavori_stagionali.html#stage" class="list-group-item"><i class="fa fa-briefcase"></i> Opportunità di stage</a>
                         </div>
                     </div>
 
@@ -132,10 +132,16 @@
                 <!-- ===== TAG SOCIALI  =====-->
                 <div class="col-md-3">
                     <address>
-                            <h3>Dove ci trovi?</h3>
-                            <p class="lead">Purtroppo solo online! Altrimenti..<br>
-                              Telefono: XXX-XXX-XXXX<br>
-                              Fax: XXX-XXX-YYYY</p>
+                            <h3><b>Sede legale</b></h3>
+                            <p class="lead">
+                                via Monte Erebor, 1<br>
+                                30170 Mestre (VE)<br>
+                                <br>
+                                <b>Skype</b> glastrav<br>
+                                <b>Tel.</b> 012.345.6789<br>
+                                <b>Fax</b> 012.345.9876<br>
+                                <b>PEC</b> glastrav@pec.it
+                            </p>
                         </address>
                 </div>
                 <!-- /.ROW -->
@@ -154,16 +160,16 @@
 
     <!-- Load page from id start -->
     <script>
-        $("#navbar").load("navbar.html");
+        $("#navbar").load("/navbar.html");
     </script>
 
     <script>
-        $("#footer").load("footer.html");
+        $("#footer").load("/footer.html");
     </script>
     <!-- Load page from id end -->
 
     <!-- Bootstrap Javascript Core-->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 
 </body>
 
