--- a/azienda/lavori_stagionali.html
+++ b/azienda/lavori_stagionali.html
@@ -15,20 +15,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Main CSS -->
-    <link href="css/main.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
 
     <!-- FontAwesome -->
-    <link href="fontawesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="fontawesome/css/font-awesome.css" rel="stylesheet">
+    <link href="/fontawesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/fontawesome/css/font-awesome.css" rel="stylesheet">
 
     <!-- MapGlyphs -->
-    <link href="mapglyphs/mapglyphs.css" rel="stylesheet">
+    <link href="/mapglyphs/mapglyphs.css" rel="stylesheet">
 
     <!-- Material Design iconic font -->
-    <link href="material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
+    <link href="/material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
 
 
 </head>
@@ -45,7 +45,7 @@
             <!-- PATH -->
 
             <ol class="breadcrumb" id="path">
-                <li><a href="index.html">Home</a>
+                <li><a href="/index.html">Home</a>
                 </li>
                 <li>Azienda</li>
                 <li class="active">Lavora con Noi</li>
@@ -61,11 +61,11 @@
                     <!-- SIDE MENU -->
 
                     <div class="list-group">
-                        <a href="chi_siamo.html" class="list-group-item"><i class="fa fa-user"></i>&nbsp; Profilo aziendale</a>
-                        <a href="business.html" class="list-group-item"><i class="fa fa-line-chart"></i> Business</a>
-                        <a href="sicurezza.html" class="list-group-item"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
-                        <a href="tos.html" class="list-group-item"><i class="md md-info-outline"></i> Termini e Condizioni</a>
-                        <a href="contatti.html" class="list-group-item"><i class="md md-email"></i> Contatti</a>
+                        <a href="/azienda/chi_siamo.html" class="list-group-item"><i class="fa fa-user"></i>&nbsp; Profilo aziendale</a>
+                        <a href="/azienda/business.html" class="list-group-item"><i class="fa fa-line-chart"></i> Business</a>
+                        <a href="/azienda/sicurezza.html" class="list-group-item"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
+                        <a href="/azienda/tos.html" class="list-group-item"><i class="md md-info-outline"></i> Termini e Condizioni</a>
+                        <a href="/azienda/contatti.html" class="list-group-item"><i class="md md-email"></i> Contatti</a>
                         <a class="list-group-item active" data-toggle="collapse"><i class="md md-work"></i> Lavora con Noi</a>
                         <div id="sottomenu">
                             <a href="#lavoristagionali" class="list-group-item list-group-item-info"><i class="fa fa-briefcase"></i> Lavori stagionali</a>
@@ -198,16 +198,16 @@
 
     <!-- Load page from id start -->
     <script>
-        $("#navbar").load("navbar.html");
+        $("#navbar").load("/navbar.html");
     </script>
 
     <script>
-        $("#footer").load("footer.html");
+        $("#footer").load("/footer.html");
     </script>
     <!-- Load page from id end -->
 
     <!-- Bootstrap Javascript Core-->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
     
     <!-- Bootstrap Javascript Core-->
     <script>
