--- a/blog.html
+++ b/blog.html
@@ -123,7 +123,7 @@ Se invece vi stuzzica l’idea di abbinare la Pasqua benessere con un soggiorno 
                    
                 <div class="panel panel-default">
                   <div class="panel-heading">
-                    <h3 class="panel-title">Pasqua in Sicilia: tra le antiche tradizioni di Trapani.</h3>
+                    <h3 class="panel-title">Pasqua in Sicilia: tra le antiche tradizioni di Trapani</h3>
                   </div>
                   <div class="panel-body">
                     <img src="/blog/img/sicilia.jpg" class="img-responsive">
