--- a/footer.html
+++ b/footer.html
@@ -30,11 +30,11 @@
                         <div class="col-sm-4">
                             <li>
                                 <p class="white">Azienda</p>
-                                <p> <a href="/chi_siamo.html">Chi siamo</a>
+                                <p> <a href="/azienda/chi_siamo.html">Chi siamo</a>
                                     <br/>
-                                    <a href="/contatti.html">Sede e contatti</a>
+                                    <a href="/azienda/contatti.html">Sede e contatti</a>
                                     <br/>
-                                    <a href="/lavori_stagionali.html">Lavora con noi</a>
+                                    <a href="/azienda/lavori_stagionali.html">Lavora con noi</a>
                                 </p>
                             </li>
                         </div>
@@ -54,9 +54,9 @@
                                 <p class="white">Link utili</p>
                                 <p> <a href="/FAQ.html">FAQ</a>
                                     <br/>
-                                    <a href="/sicurezza.html">Informativa sulla Privacy</a>
+                                    <a href="/azienda/sicurezza.html">Informativa sulla Privacy</a>
                                     <br/>
-                                    <a href="/tos.html">Termini di Servizio</a>
+                                    <a href="/azienda/tos.html">Termini di Servizio</a>
                                     <br/>
                                 </p>
                             </li>
