--- a/area_personale/acquisti_conparigi.html
+++ b/area_personale/acquisti_conparigi.html
@@ -103,7 +103,7 @@
                                 <p>VISA/ELECTRON - ************0123</p>
                                 <hr/>
                                 <a class="btn btn-warning" href="/area_personale/fattura_404-2941210-0056455.pdf" role="button">Fattura</a>
-                                <a class="btn btn-default" href="/contatti.html" role="button">Segnala un problema</a>
+                                <a class="btn btn-default" href="/azienda/contatti.html" role="button">Segnala un problema</a>
                                 <a class="btn btn-success" href="/area_personale/recensioni_parigi_inserisci.html" role="button">Scrivi una recensione</a>
                             </div>
 
@@ -134,7 +134,7 @@
                                 <p>MASTERCARD - ************0123</p>
                                 <hr/>
                                 <a class="btn btn-warning" href="/fattura_404-2941210-6149129.pdf" role="button">Fattura</a>
-                                <a class="btn btn-default" href="/contatti.html" role="button">Segnala un problema</a>
+                                <a class="btn btn-default" href="/azienda/contatti.html" role="button">Segnala un problema</a>
                                 <a class="btn btn-default" href="/area_personale/recensioni_maldive_modifica.html" role="button">Modifica la recensione</a>
                             </div>
 
