--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                             <p>Compagnia di viaggi da poco sul mercato, che già non ha tradito i clienti che l'hanno scelta.
                                 <br>Viaggi all’insegna della conoscenza approfondita di una destinazione, viaggi pensati per suscitare emozioni e liberare fantasie. Itinerari che conducono attraverso storia, tecnologia e abitudini. Venite con noi, con la nostra passione, a riscoprire cosa si trova nel mondo! E ricordate: non come turisti, ma come ospiti!
                                 <br>
-                                <br><a class="btn btn-default" href="chi_siamo.html" role="button">Scopri di più su di noi</a>
+                                <br><a class="btn btn-default" href="/azienda/chi_siamo.html" role="button">Scopri di più su di noi</a>
                             </p>
                         </div>
                     </div>
