--- a/viaggi/acquisto-viaggio_riepilogo.html
+++ b/viaggi/acquisto-viaggio_riepilogo.html
@@ -166,15 +166,19 @@
                                     </td>
                                 </tr>
                             </table>
+                            
+                            <div class="hidden-xs">
+                                <a class="btn btn-warning pull-left" href="/viaggi/acquisto-viaggio_transazione.html" role="button">Completa pagamento</a>
+                                <a class="btn btn-default pull-right" href="/viaggi/acquisto-viaggio.html" role="button">Modifica</a>
+                            </div>
+                            <div class="visible-xs" style="text-align: center">
+                                 <a class="btn btn-warning" href="/viaggi/acquisto-viaggio_transazione.html" role="button">Completa pagamento</a>
+                                <br><br>
+                                <a class="btn btn-default" href="/viaggi/acquisto-viaggio.html" role="button">Modifica</a>
+                            </div>
 
                         </div>
 
-                        <hr style="margin-top: 2px; margin-bottom: 2px; border-color: #DEDEDE;" />
-
-                        <div class="panel-body">
-                                <a class="btn btn-default pull-left" href="/viaggi/acquisto-viaggio.html" role="button">Modifica</a>
-                                <a class="btn btn-warning pull-right" href="/viaggi/acquisto-viaggio_transazione.html" role="button">Completa pagamento</a>
-                        </div>
                     </div>
                 </div>
             </div>
