--- a/sitemap.html
+++ b/sitemap.html
@@ -121,6 +121,10 @@
                             <li><a href="/viaggi/oceania/sydney.html" title="Sydney">Sydney</a></li>
                         </ul>
                     </ul>
+                    
+                    <br>
+
+                    <li><a href="/sitemap.html" title="Mappa del sito">Mappa del sito</a></li>
                 </ul>
 
             </table>
