--- a/error_page/404.html
+++ b/error_page/404.html
@@ -48,10 +48,10 @@
 				<nav class="text12_a">
 					<ul>
 						<li><a href="/index.html">Home</a></li>
-						<li><a href="/chi_siamo.html">Chi siamo</a></li>
+						<li><a href="/azienda/chi_siamo.html">Chi siamo</a></li>
 						<li><a href="/blog.html">Blog</a></li>
-						<li><a href="/contatti.html">Contatti</a></li>
-						<li><a href="/sitemap.xml">Mappa</a></li>
+						<li><a href="/azienda/contatti.html">Contatti</a></li>
+						<li><a href="/sitemap.html">Mappa</a></li>
 					</ul>
 				</nav>			
 			</section>
