--- a/navbar_conparigi.html
+++ b/navbar_conparigi.html
@@ -75,7 +75,7 @@
 
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login<span style="margin-left: 5px;" class="fa fa-angle-down"></span></a>
-                    <ul class="dropdown-menu pull-right" role="menuitem" style="min-width: 250px;">
+                    <ul class="dropdown-menu" role="menuitem" style="min-width: 250px;">
                         <li>
                             <form class="form" role="form" id="login">
                                 <div class="input-group">
